Calculadora carlos y Jose Carlos

--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@ function square() {
 </script>
 </head>
 <body>
+<h1> Carlos Prieto Rebollo y Jose Carlos Rodriguez Capilla </h1>
   Number:
   <input type="text" id="n1"><p>
 
